docs-archive/apache-airflow-providers-google/22.5.0/_sources/_api/airflow/providers/google/cloud/transfers/sftp_to_gcs/index.rst.txt
airflow.providers.google.cloud.transfers.sftp_to_gcs
====================================================

.. py:module:: airflow.providers.google.cloud.transfers.sftp_to_gcs

.. autoapi-nested-parse::

   This module contains SFTP to Google Cloud Storage operator.



Attributes
----------

.. autoapisummary::

   airflow.providers.google.cloud.transfers.sftp_to_gcs.WILDCARD


Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.transfers.sftp_to_gcs.SFTPToGCSOperator


Module Contents
---------------

.. py:data:: WILDCARD
   :value: '*'


.. py:class:: SFTPToGCSOperator(*, source_path, destination_bucket, destination_path = None, gcp_conn_id = 'google_cloud_default', sftp_conn_id = 'ssh_default', mime_type = 'application/octet-stream', gzip = False, move_object = False, impersonation_chain = None, sftp_prefetch = True, use_stream = False, fail_on_file_not_exist = True, **kwargs)

   Bases: :py:obj:`airflow.providers.google.version_compat.BaseOperator`


   Transfer files to Google Cloud Storage from SFTP server.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:SFTPToGCSOperator`

   :param source_path: The sftp remote path. This is the specified file path
       for downloading the single file or multiple files from the SFTP server.
       You can use only one wildcard within your path. The wildcard can appear
       inside the path or at the end of the path.
   :param destination_bucket: The bucket to upload to.
   :param destination_path: The destination name of the object in the
       destination Google Cloud Storage bucket.
       If destination_path is not provided file/files will be placed in the
       main bucket path.
       If a wildcard is supplied in the destination_path argument, this is the
       prefix that will be prepended to the final destination objects' paths.
   :param gcp_conn_id: (Optional) The connection ID used to connect to Google Cloud.
   :param sftp_conn_id: The sftp connection id. The name or identifier for
       establishing a connection to the SFTP server.
   :param mime_type: The mime-type string. Applied on both the tempfile and stream paths.
   :param gzip: Compress the object body before upload. Applied on both the tempfile and stream
       paths. The object name is unchanged; ``Content-Encoding`` is not set.
   :param move_object: When move object is True, the object is moved instead
       of copied to the new location. This is the equivalent of a mv command
       as opposed to a cp command.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :param sftp_prefetch: Whether to enable SFTP prefetch, the default is True.
       Prefetch can queue the whole file in worker RAM; for large files prefer
       ``use_stream=True`` and ``sftp_prefetch=False``.
   :param use_stream: Determines the transfer method from SFTP to GCS.
       When ``False`` (default), the file downloads locally
       then uploads (may require significant disk space).
       When ``True``, the file streams directly without using local disk.
       Streaming skips disk but does not bound RAM if prefetch is on.
       Defaults to ``False``.
   :param fail_on_file_not_exist: If True, operator fails when file does not exist,
       if False, operator will not fail and skips transfer. Default is True.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('source_path', 'destination_path', 'destination_bucket', 'impersonation_chain')



   .. py:attribute:: source_path


   .. py:attribute:: destination_path
      :value: None



   .. py:attribute:: destination_bucket


   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: mime_type
      :value: 'application/octet-stream'



   .. py:attribute:: gzip
      :value: False



   .. py:attribute:: sftp_conn_id
      :value: 'ssh_default'



   .. py:attribute:: move_object
      :value: False



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: sftp_prefetch
      :value: True



   .. py:attribute:: use_stream
      :value: False



   .. py:attribute:: fail_on_file_not_exist
      :value: True



   .. py:property:: sftp_hook


   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: get_openlineage_facets_on_start()


